public/stylesheets/style.css
*, *:after, *:before {
  -webkit-box-sizing: border-box;
  -moz-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  padding: 50px;
  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
}

.playArea{
  background: url('../images/gameboard.png') no-repeat;
  background-size: 100%;
  width: 908px;
  height: 908px;
}

.board {
  margin-left: 35px;
}

[class*='col-'] {
  width: 12%;
  float: left;
  height: 104px;
}

[class*='col-0'] {
  margin-top: 136px;
}

[class*='col-3'] {
  margin-top: 7px;
}

.cf:before,
.cf:after {
  content: " "; /* 1 */
  display: table; /* 2 */
}

.cf:after {
  clear: both;
}

img {
  width: 200px;
}

